Fixes From Beta Testers Round 2
Fix scoping errors breaking restore
Add border styling to Recently Played
Fix typos breaking timestamps/hot words
Fix data-cat rendering with "false" string
Only apply scrollbar styling to panel
Shuffle styles in inputs/panels

--- a/themes/engine/_songs.sass
+++ b/themes/engine/_songs.sass
@@ -54,7 +54,8 @@
 	> .playlist-checkbox
 		@extend .ts-main-filter
 
-body.ts-played #queue .song.ts-recent .details
-	color: $recent
-body.ts-played #queue .song.ts-recent:hover .details::before
-	content: "Recently Played - "
+
+body.ts-played #queue .song.ts-recent 
+	box-shadow: inset -6px 0 0 0px $recent !important
+	.details
+		color: $recent
