--- a/visual/_inputs.sass
+++ b/visual/_inputs.sass
@@ -1,13 +1,5 @@
 // the options menus
 
-#tsWindow
-	display: none
-	z-index: 1000
-	align-items: center
-	justify-content: center
-	background: rgba(0, 0, 0, 0.75)
-	@include fix(0, 0, 0, 0)
-
 #tsHotBar
 	display: none
 	flex-wrap: wrap
